kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pypi-server
  name: pypi-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pypi-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pypi-server
    spec:
      containers:
        - name: pypi-server
          image: dockyard.olescloud.de/pypi-server:1.1.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 125m
              memory: 96Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - mountPath: /opt/packages
              name: pypi-server-packages
            - mountPath: /data/.htpasswd
              name: pypi-login
              subPath: .htpasswd
      restartPolicy: Always
      imagePullSecrets:
        - name: dockyard
      volumes:
        - name: pypi-server-packages
          persistentVolumeClaim:
            claimName: pypi-server-packages
        - name: pypi-login
          secret:
            secretName: pypi-login
      securityContext:
        fsGroup: 990
