kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pypi-server
  name: pypi-server
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: pypi-server
  type: ClusterIP
