kubernetes/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pypi-server
  namespace: default

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`pypi.olescloud.de`)
      kind: Rule
      services:
        - name: pypi-server
          port: 80
  tls:
    certResolver: default
